--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
+    "react-social-icons": "^6.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
