--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
-    "react-social-icons": "^6.16.0"
+    "react-social-icons": "^6.16.0",
+    "square": "^35.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
